fix search field alignment and btn border-radius

--- a/css/app.css
+++ b/css/app.css
@@ -66,7 +66,12 @@ footer .bull { font-size: 16px; margin: 0 10px; }
 
 
 #search-field .btn-geoLocation { border-top-left-radius: 4px; border-bottom-left-radius: 4px; padding: 7px 12px 5px;}
-.search-input { margin-right: 25px; }
+.search-group { display: table-row; }
+.search-input, .btn-group-loc { display: table-cell; }
+.search-input { width: 100%; }
+.search-input .input-group { width: 98%; }
+#search-field .btn-nationLocation { border-bottom-right-radius: 4px; border-top-right-radius: 4px;}
+
 .btn-nationLocation { padding: 5px 12px 4px; }
 .btn-downloadAll { font-size: 16px; padding: 3px 5px 2px; top: 80px; }
 .btn-baselayer-control { margin-right: 3px; width: 100px; height: 25px;	background-color: #FFFFFF; font-family: Arial; border-radius: 3px; color: #000000; cursor: pointer;	font-weight: normal; border: solid 1px #CCCCCC;	outline:none; }
